--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -65,3 +65,12 @@
   letter-spacing: .125rem;
   line-height: 1.7;
 }
+
+.header {
+  width: 100%;
+  height: 100px;
+  border-bottom: 1px solid #eaeaea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
